# camundaMCP

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
src/camunda_mcp/: __main__.py  authz.py  config.py  http.py  logging.py
src/camunda_mcp/camunda/: client.py  errors.py  models.py  variables.py
src/camunda_mcp/server/: app.py  tools.py
tests/: conftest.py
tests/fixtures/: simple_external_task.bpmn
tests/integration/: test_e2e.py
tests/unit/: test_authz.py  test_client.py  test_http.py  test_tools.py  test_variables.py
